feat: deploy silence-operator

--- a/kubernetes/main/apps/observability/kustomization.yaml
+++ b/kubernetes/main/apps/observability/kustomization.yaml
@@ -6,13 +6,12 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./alertmanager-silencer/ks.yaml
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./karma/ks.yaml
   - ./kromgo/ks.yaml
   - ./network-ups-tools/ks.yaml
+  - ./silence-operator/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
-  - ./prometheus-operator-crds/ks.yaml
   # Exporters
   - ./exporters
