--- a/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
@@ -20,3 +20,23 @@ spec:
   wait: false # no flux ks dependents
   interval: 30m
   timeout: 5m
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app kube-prometheus-stack-crds
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./kubernetes/main/apps/observability/kube-prometheus-stack/crds
+  prune: false # never should be deleted
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false # no flux ks dependents
+  interval: 30m
+  timeout: 5m
