--- a/kubernetes/main/apps/observability/silence-operator/ks.yaml
+++ b/kubernetes/main/apps/observability/silence-operator/ks.yaml
@@ -3,16 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kube-prometheus-stack
+  name: &app silence-operator
   namespace: flux-system
 spec:
   targetNamespace: observability
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: external-secrets-stores
-  path: ./kubernetes/utility/apps/observability/kube-prometheus-stack/app
+  path: ./kubernetes/main/apps/observability/silence-operator/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,14 +23,14 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kube-prometheus-stack-crds
+  name: &app silence-operator-crds
   namespace: flux-system
 spec:
   targetNamespace: observability
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./kubernetes/utility/apps/observability/kube-prometheus-stack/crds
+  path: ./kubernetes/main/apps/observability/silence-operator/crds
   prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
