--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -178,15 +178,15 @@ patches:
         disableSearchDomain: true
 
   # Enable cluster discovery
-  - |-
-    cluster:
-      discovery:
-        enabled: true
-        registries:
-          kubernetes:
-            disabled: false
-          service:
-            disabled: true
+  # - |-
+  #   cluster:
+  #     discovery:
+  #       enabled: true
+  #       registries:
+  #         kubernetes:
+  #           disabled: false
+  #         service:
+  #           disabled: true
 
   # Configure kubelet
   - |-
@@ -214,6 +214,7 @@ patches:
         net.ipv4.tcp_rmem: 4096 87380 33554432 # 2.5Gb/s
         net.ipv4.tcp_wmem: 4096 65536 33554432 # 2.5Gb/s
         net.ipv4.tcp_window_scaling: 1         # 2.5Gb/s
+        vm.nr_hugepages: "1024"
 
   # Custom sysfs settings # 5/6 nodes are 6c/12t and constantly throwing DMESG errors
   - |-
@@ -261,9 +262,6 @@ controlPlane:
     - |-
       cluster:
         allowSchedulingOnMasters: true
-        apiServer:
-          extraArgs:
-            feature-gates: AuthorizeNodeWithSelectors=false
         controllerManager:
           extraArgs:
             bind-address: 0.0.0.0
