--- a/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
@@ -15,7 +15,7 @@ stringData:
     SVC_PALWORLD_ADDR: ENC[AES256_GCM,data:sN51CLk0J5lueA==,iv:h/WiPB2ByiOjLLJwSegF0SXKklZazd81e0Qn//G8Wbk=,tag:Isi9IegNRCGbZ+nJfgC6Fw==,type:str]
     SVC_MINECRAFT_ADDR: ENC[AES256_GCM,data:f12BWnkvCdvjNg==,iv:gHfGEfHHQY9Rbu0uDls0sLdkje7UIQ4Mp+l5n33BJBA=,tag:NUo6kfMNYZQY9gRqZZN36g==,type:str]
     SVC_COREKEEPER_ADDR: ENC[AES256_GCM,data:fA4djsP75bTYlA==,iv:Kipkmlx+4AEkjmSjCdLKxSRRViAp0AP8SYgcyQImC0s=,tag:o7yurCyzgSHSnGmCHqZmAg==,type:str]
-    SVC_ABIOTIC_ADDR: ENC[AES256_GCM,data:vwvzpurDqzJaXw==,iv:/Ua885qZHEwwFvGBYsuVIknav8bJLkMriXH2ngtc18Y=,tag:XdmXKw5LSXAXmcxBTz7KYA==,type:str]
+    SVC_VRISING_ADDR: ENC[AES256_GCM,data:UMTb1QfKqeCiqA==,iv:OEI5tZKR6m0AgO8VqezIowzRUeqSI2qwSU34P5IqIXo=,tag:xMiAC6TEaYLb6o8i1jHlyw==,type:str]
     #ENC[AES256_GCM,data:NYqIEJwguAGYzknS,iv:U0oZbqHMObZ+Wvx8ryQE8dlR0SG26wsfYV3F2F67H+w=,tag:oCJYngN4jrdWrQug82W9vQ==,type:comment]
     SECRET_NFS_DATA: ENC[AES256_GCM,data:85DKixrSI8rproq1PmI=,iv:kvg70gJHchxhVQsjGInXA8V1bx1XzWjmICMhfquYZTg=,tag:f3dPXLWTKx7ApYucQtIe1w==,type:str]
     SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:U5zrsgH3/TED4QVZSzP2,iv:E1RB4QWwMpLYSGRJLOtC89Uat/7K3Hf/4m8feU2dcGw=,tag:TrZbkBC+3I7OUIb2VWGuWw==,type:str]
@@ -38,8 +38,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-23T03:19:25Z"
-    mac: ENC[AES256_GCM,data:BXOtz3zQ0/0ZKwkX1IBPNbFubWD09gLpmTApBEg9yI1dcBIQLJhJ9aAv9uoHBkN2F/maCM88WwiHlkL2pTicIISoKY/dG2xAXGrRkq1oCbxVmbNuSSMoONYPN1FtW75bC3i3ye2e7Vd7fknYnt3BN8eUDMHdbh/GdfP1mcdFsGU=,iv:FgNw7gQ2kOCGqPcdGtsHpuQvkgkiD6VFZCxkwdbeEnI=,tag:v72PeumDZC1KlRIbDm4qEg==,type:str]
+    lastmodified: "2025-01-04T22:06:04Z"
+    mac: ENC[AES256_GCM,data:lgGTL5ASfoo1g0XR2PxkghaJjkSTuJvLznoKr4nv1lT3kEgyD8eCYDshBOEcOXkJVORzri9F/TeW7npTbjOZ8HopPubuZmXLZSW6y+nqvzWGFyZIZ6fgx0AxcEpTv/KO7/TBBijFE6IhcgY4UhIMM4OlOmnSkbDbs9yVr9RMmqU=,iv:hvJNvaxlaQiaIsa/8RLvP4AZ+1giveHZOzFxdcW1Kxk=,tag:Z3rTOtmafUAFAzjrJ8KSZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
