feat: update vrising config

--- a/kubernetes/main/apps/games/vrising/app/externalsecret.yaml
+++ b/kubernetes/main/apps/games/vrising/app/externalsecret.yaml
@@ -13,11 +13,11 @@ spec:
     template:
       engineVersion: v2
       data:
+        VR_DESCRIPTION: "{{ .VR_DESCRIPTION }}"
+        VR_LOWER_FPS_WHEN_EMPTY: "{{ .VR_LOWER_FPS_WHEN_EMPTY }}"
         VR_PASSWORD: "{{ .VR_PASSWORD }}"
         VR_SERVER_NAME: "{{ .VR_SERVER_NAME }}"
-        VR_LOWER_FPS_WHEN_EMPTY: "{{ .VR_LOWER_FPS_WHEN_EMPTY }}"
         VR_SECURE: "{{ .VR_SECURE }}"
-        VR_DIFFICULTY_PRESET: "{{ .VR_DIFFICULTY_PRESET }}"
         SERVERNAME: "{{ .VR_SERVER_NAME }}"
   dataFrom:
   - extract:
