feat: add kyoo group

--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -53,6 +53,16 @@
       "separateMinorPatch": true
     },
     {
+      "description": ["Kyoo Group"],
+      "groupName": "Kyoo",
+      "matchPackagePatterns": ["kyoo"],
+      "matchDatasources": ["docker", "github-releases"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      },
+      "separateMinorPatch": true
+    },
+    {
       "description": ["Rook-Ceph Group"],
       "groupName": "Rook-Ceph",
       "matchPackagePatterns": ["rook.ceph"],
