feat: update to new 4.7.1 chart

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -90,6 +90,10 @@ spec:
       databases: ["kyoo"]
       password:
         type: AlphaNumeric
+    - name: "kyoo-all"
+      databases: ["kyoo_back", "kyoo_transcoder"]
+      password:
+        type: AlphaNumeric
     - name: "paperless"
       databases: ["paperless"]
       password:
