--- a/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
@@ -3,18 +3,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name kyoo-chart-secret
+  name: &name kyoo-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
       engineVersion: v2
       data:
         # App
-        kyoo_apikeys: '{{ .KYOO_API_KEY }}'
+        KYOO_API_KEY: '{{ .KYOO_API_KEY }}'
         TMDB_API_KEY: '{{ .TMDB_API_KEY }}'
         TVDB_APIKEY: ""
         TVDB_PIN: ""
@@ -31,13 +28,27 @@ spec:
         OIDC_AUTHENTIK_TOKEN: https://sso.${SECRET_DOMAIN}/application/o/token/
         OIDC_AUTHENTIK_PROFILE: https://sso.${SECRET_DOMAIN}/application/o/userinfo/
         OIDC_AUTHENTIK_SCOPE: openid email profile
-        clientId: '{{ .KYOO_CLIENT_ID }}'
-        clientSecret: '{{ .KYOO_CLIENT_SECRET }}'
-        # Postgres
-        POSTGRES_USER: kyoo_all #temp
-        POSTGRES_PASSWORD: watchSomething4me #temp
+        OIDC_AUTHENTIK_CLIENTID: '{{ .KYOO_CLIENT_ID }}'
+        OIDC_AUTHENTIK_SECRET: '{{ .KYOO_CLIENT_SECRET }}'
+        # Database
+        POSTGRES_DB: '{{ .dbname }}'
+        POSTGRES_SERVER: '{{ .host }}'
+        POSTGRES_PORT: '{{ .port }}'
+        POSTGRES_USER: '{{ .user }}'
+        POSTGRES_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
       key: kyoo
+    sourceRef: &onepass
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
   - extract:
       key: kometa
+    sourceRef: *onepass
+  - extract:
+      key: postgres-pguser-kyoo
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
