--- a/kubernetes/main/apps/media/kyoo/app/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ./pvc.yaml
+  # - ./pvc.yaml
   - ../../../../../shared/templates/gatus/external
   - ../../../../../shared/templates/volsync
