--- a/kubernetes/main/apps/media/kyoo/app/pvc.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/pvc.yaml
@@ -2,19 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 5Gi
-  storageClassName: ceph-filesystem
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: transcoder-storage
+  name: kyoo-transcoder
 spec:
   accessModes:
     - ReadWriteOnce
