--- a/kubernetes/main/apps/media/kyoo/ks.yaml
+++ b/kubernetes/main/apps/media/kyoo/ks.yaml
@@ -1,31 +1,3 @@
-# ---
-# # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: &app kyoo-chart
-#   namespace: flux-system
-# spec:
-#   targetNamespace: media
-#   commonMetadata:
-#     labels:
-#       app.kubernetes.io/name: *app
-#   dependsOn:
-#     - name: external-secrets-stores
-#     - name: volsync
-#   path: ./kubernetes/main/apps/media/kyoo/app
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: false # no flux ks dependents
-#   interval: 30m
-#   timeout: 5m
-#   postBuild:
-#     substitute:
-#       APP: *app
-#       VOLSYNC_CLAIM: back-storage
-#       VOLSYNC_CAPACITY: 30Gi
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -41,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
     - name: volsync
-  path: ./kubernetes/main/apps/media/kyoo/app-template
+  path: ./kubernetes/main/apps/media/kyoo/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -53,3 +25,30 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 30Gi
+# ---
+# # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: &app kyoo
+#   namespace: flux-system
+# spec:
+#   targetNamespace: media
+#   commonMetadata:
+#     labels:
+#       app.kubernetes.io/name: *app
+#   dependsOn:
+#     - name: external-secrets-stores
+#     - name: volsync
+#   path: ./kubernetes/main/apps/media/kyoo/app-template
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-kubernetes
+#   wait: false # no flux ks dependents
+#   interval: 30m
+#   timeout: 5m
+#   postBuild:
+#     substitute:
+#       APP: *app
+#       VOLSYNC_CAPACITY: 30Gi
