feat: deploy kyoo helm chart

--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./jellyseerr/ks.yaml
   - ./kavita/ks.yaml
   - ./komga/ks.yaml
-  # - ./kyoo/ks.yaml
+  - ./kyoo/ks.yaml
   - ./maintainerr/ks.yaml
   - ./plex/ks.yaml
   - ./tautulli/ks.yaml
