--- a/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         #Meili
         MEILI_MASTER_KEY: '{{ .MEILI_MASTER_KEY }}'
         #RabbitMQ
-        RABBITMQ_USER: kyoo
+        RABBITMQ_USER: kyoo_all
         RABBITMQ_COOKIE: '{{ .RABBITMQ_COOKIE }}'
         RABBITMQ_PASS: '{{ .RABBITMQ_PASS }}'
         # OIDC
@@ -47,7 +47,7 @@ spec:
       key: kometa
     sourceRef: *onepass
   - extract:
-      key: postgres-pguser-kyoo
+      key: postgres-pguser-kyoo-all
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
