fix: ingress address

--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
         kyoo_scanner: *rabbit
 
     kyoo:
-      address: https://kyoo-chart.${SECRET_DOMAIN}
+      address: https://kyoo.${SECRET_DOMAIN}
       transcoderAcceleration: vaapi # hardware acceleration profile (valid values: disabled, vaapi, qsv, nvidia)
       apikey:
         existingSecret: *secret
