feat: add resources

--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -98,6 +98,14 @@ spec:
         existingSecret: *secret
 
     back:
+      kyoo_back:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 1Gi
+          limits:
+            cpu: 4000m
+            memory: 8Gi
       persistence:
         existingClaim: *app
 
