feat: update tcp

--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
@@ -67,7 +67,7 @@ spec:
               ZIGBEE2MQTT_CONFIG_SERIAL_BAUDRATE: 115200
               ZIGBEE2MQTT_CONFIG_SERIAL_DISABLE_LED: "false"
               ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: ezsp
-              ZIGBEE2MQTT_CONFIG_SERIAL_PORT: tcp://192.168.10.182:6638
+              ZIGBEE2MQTT_CONFIG_SERIAL_PORT: tcp://slzb.internal:6638
               DEBUG: "zigbee-herdsman*"
             envFrom:
               - secretRef:
