keep using my own image

--- a/kubernetes/main/apps/observability/exporters/smartctl-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/exporters/smartctl-exporter/app/helmrelease.yaml
@@ -26,8 +26,9 @@ spec:
     keepHistory: false
   values:
     fullnameOverride: *app
-    config:
-      device_include: /dev/[nvme|sd].*
+    image:
+      repository: ghcr.io/joryirving/smartctl_exporter
+      tag: 0.13.0@sha256:a31f74f50c0e3a22cc1bb474ea8ff0d5d4c4ca3be5409eaf24d8894ff74b0921
     serviceMonitor:
       enabled: true
       relabelings:
