--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
             env:
               TZ: ${TIMEZONE}
               PLEX_ADVERTISE_URL: https://plex.${SECRET_DOMAIN}:443,http://${SVC_PLEX_ADDR}:32400
-              PLEX_NO_AUTH_NETWORKS: ${NODE_CIDR}
+              PLEX_NO_AUTH_NETWORKS: ${NODE_CIDR},${TRUSTED_CIDR}
             probes:
               liveness: &probes
                 enabled: true
