feat: add shell back

--- a/.github/workflows/utility-ks-sync.yaml
+++ b/.github/workflows/utility-ks-sync.yaml
@@ -60,6 +60,7 @@ jobs:
       - name: Sync Kustomization
         env:
           KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
+        shell: bash
         run: |
           flux \
               --context ${{ matrix.cluster }} \
