--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -99,6 +99,7 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
 
       - name: Setup Workflow Tools
+        shell: bash
         run: brew install jo yq
 
       - name: Checkout Default Branch
@@ -135,17 +136,20 @@ jobs:
             --output-file pull.yaml
 
       - name: Filter Default Branch Results
+        shell: bash
         run: |
           yq -r '[.. | .images? | select(. != null)] | flatten | sort | unique | .[]' \
               default.yaml > default.txt
 
       - name: Filter Pull Request Branch Results
+        shell: bash
         run: |
           yq -r '[.. | .images? | select(. != null)] | flatten | sort | unique | .[]' \
               pull.yaml > pull.txt
 
       - name: Compare Default and Pull Request Images
         id: extract-images
+        shell: bash
         run: |
           images=$(jq --compact-output --raw-input --null-input '[inputs]' < <(grep -vf default.txt pull.txt))
           echo "images=${images}" >> $GITHUB_OUTPUT
@@ -194,6 +198,7 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
 
       - name: Setup Workflow Tools
+        shell: bash
         run: brew install siderolabs/tap/talosctl
 
       - name: Pre-pull Image
