chore: swap to DNS

--- a/kubernetes/main/apps/observability/exporters/nut-exporter/app/servicemonitor.yaml
+++ b/kubernetes/main/apps/observability/exporters/nut-exporter/app/servicemonitor.yaml
@@ -28,7 +28,7 @@ spec:
           regex: (pod)
       params:
         server:
-          - ${SVC_NUT_ADDR}
+          - network-nut.${SECRET_DOMAIN}
       path: /ups_metrics
       port: metrics
       scheme: http
