--- a/kubernetes/shared/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/shared/settings/cluster-secrets.sops.yaml
@@ -9,7 +9,7 @@ stringData:
     BITWARDEN_PROJ: ENC[AES256_GCM,data:3xASPHhAzvxIh+n4h3pNGh8eUGRDlltTXAqkO5erghewmqGc,iv:DONQu8zQN4wMppg7NNG6klwSGjbb4C88Cqr3YyGdps0=,tag:S8oQebl4Q9xRvi4+LuEmPw==,type:str]
     CLOUDFLARE_ACCOUNT_ID: ENC[AES256_GCM,data:kLP6M5Bb2BuNOarZ5i2SvE01QCk4sxgNtp7ZlXlIKt4=,iv:2SxTwsoMNJ4pEqA/og2Aewq7iO4EZC0EYxGd5P4DFyE=,tag:caSVj/2tKvlYJKC7J79egQ==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:4dlwtokraZ0=,iv:AyH/endMPGS/6iYDunUt1AqP0NIRqc2ZEVQe6JQRifw=,tag:IBhjr44MJu44hmc0UOLZEA==,type:str]
-    SVC_NUT_ADDR: ENC[AES256_GCM,data:YIz8zQ+sO21pOo0=,iv:8loreDYCo6YSf6yiYnTeUSd+DWIqdg/EcgALlIEVK8A=,tag:pQQJstkhBbbyo5Oa/WIypw==,type:str]
+    SVC_NETWORK_NUT_ADDR: ENC[AES256_GCM,data:crW+MqPlCwaCs9k=,iv:e6LO2ELTDH84oXUIlF76CJ7MTuKNUPSJxG47kXW/yIo=,tag:3n22Qz7/Atuf49yibSSyAQ==,type:str]
     #ENC[AES256_GCM,data:27uZO6UzcTf5A9D6,iv:1OXUBE3M/TYquUyfFO9QK3rQsAsJ8t/dex6vg+d1bao=,tag:q5T/XEhCtRnBuiYkpR3Ltw==,type:comment]
     TRUSTED_CIDR: ENC[AES256_GCM,data:WuEfwOvS3rNQZ5Kw/YqK,iv:VZB2mzK1QkkGbjknpklpH3UWqfu4+1TTM8rYiZ0uIko=,tag:ipPi1MPUmsR+n957QHpS8w==,type:str]
 sops:
@@ -27,8 +27,8 @@ sops:
             eG8vOG4zOXRQVW01K1hzNnNUdUxYNDQK2r6cmnIxsIDMUHfq8p0kOcr+E/KAea4z
             tdtvD/HkOfTil0Qwld0NWRyA4DKC7AjhC0P8QlhYrNlfr5lqBqIFmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-06T20:22:36Z"
-    mac: ENC[AES256_GCM,data:lp0JY1nGNfTHy+mJnx0v530kpjDtiLWCHXy5MzAJyWdwccDccOKRgozmcZMuXYHGbHkYjv784+qY/RBWM/NC32tHqq0zTsush/4zVud0B0qrJEs+nSsoEB1BAIscbBKFneSDznwkanA69sLS8Y+nI+12Rx4IrkglnaWtSoDU3Hg=,iv:/9McrbMBODU1SvHYWnhvOZXG6JdFsmA94u0ZQfe4NU0=,tag:H7B7myUYRzhVG7aCto+19w==,type:str]
+    lastmodified: "2025-01-06T20:54:45Z"
+    mac: ENC[AES256_GCM,data:32AXRpipzw39movvqQ9mOCxQzpwYsKY3PaINNQJ8Fvu2DSbsVJewNCcJJXNBWwhzAnOju7MmUHmC42nxeF5toOgblFjQgNhwVeXY2KzJMWY88tlUGbWFKazfDRaGgT/J0U6/nIw4eTZM+Zm93bg1u2Ivvk6rCzw3pBldHx2tt8M=,iv:xvYDGqzd5j+9nqkbYg50SyiuJQji5bCXceDKXkX5qnU=,tag:ykFh3g7Ejv6KAu5E0KuQnQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
