--- a/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_NUT_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_NETWORK_NUT_ADDR:=temp}
           external-dns.alpha.kubernetes.io/hostname: network-nut.${SECRET_DOMAIN}
         externalTrafficPolicy: Cluster
         ports:
