--- a/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -48,6 +48,11 @@ spec:
     service:
       app:
         controller: *app
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_SERVER_NUT_ADDR:=temp}
+          external-dns.alpha.kubernetes.io/hostname: server-nut.${SECRET_DOMAIN}
+        externalTrafficPolicy: Cluster
         ports:
           http:
             port: 3493
