--- a/kubernetes/main/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -25,9 +25,11 @@ spec:
   values:
     replicas: 2
     args:
+      - --kubelet-insecure-tls
       - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
       - --kubelet-use-node-status-port
-      - --metric-resolution=15s
+      - --metric-resolution=10s
+      - --kubelet-request-timeout=2s
     metrics:
       enabled: true
     serviceMonitor:
