--- a/kubernetes/utility/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -27,7 +27,8 @@ spec:
       - --kubelet-insecure-tls
       - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
       - --kubelet-use-node-status-port
-      - --metric-resolution=15s
+      - --metric-resolution=10s
+      - --kubelet-request-timeout=2s
     metrics:
       enabled: true
     serviceMonitor:
