--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -50,9 +50,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
-          fetch-depth: 0
 
-      - name: Setup Workflow Tools
+      - name: Setup mise
         uses: jdx/mise-action@v2
         env:
           GITHUB_TOKEN: "${{ steps.app-token.outputs.token }}"
@@ -60,6 +59,7 @@ jobs:
           mise_toml: |
             [tools]
             "aqua:fluxcd/flux2" = "latest"
+            "aqua:mikefarah/yq" = "latest"
 
       - name: Write kubeconfig
         id: kubeconfig
@@ -99,7 +99,7 @@ jobs:
               flux \
                   --context ${cluster_name} \
                   --namespace ${repo_namespace} \
-                  reconcile source helm ${repo_name}
+                  reconcile source helm ${repo_name} || true
           done
 
       - if: ${{ github.event.inputs.clusterName != '' && github.event.inputs.helmRepoNamespace != '' && github.event.inputs.helmRepoName != '' }}
@@ -111,4 +111,4 @@ jobs:
           flux \
               --context ${{ github.event.inputs.clusterName }} \
               --namespace ${{ github.event.inputs.helmRepoNamespace }} \
-              reconcile source helm ${{ github.event.inputs.helmRepoName }}
+              reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
