--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -40,10 +40,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
-          fetch-depth: 0
 
       - name: Setup mise
         uses: jdx/mise-action@v2
+        env:
+          GITHUB_TOKEN: "${{ steps.app-token.outputs.token }}"
         with:
           mise_toml: |
             [tools]
