--- a/kubernetes/shared/repos/helm/kustomization.yaml
+++ b/kubernetes/shared/repos/helm/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./descheduler.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
+  - ./fluxcd-community.yaml
   - ./grafana.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
