--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -3,7 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # Flux-Kustomizations
   - ./addons/ks.yaml
   - ./clickops/ks.yaml
+  - ./flux/ks.yaml
   - ./weave-gitops/ks.yaml
