--- a/kubernetes/main/apps/flux-system/flux/github/notifications/externalsecret.yaml
+++ b/kubernetes/main/apps/flux-system/flux/github/notifications/externalsecret.yaml
@@ -1,9 +1,9 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name github-webhook-token
+  name: &name github-token
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,7 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        token: "{{ .FLUX_GITHUB_WEBHOOK_TOKEN }}"
+        token: "{{ .FLUX_GITHUB_TOKEN }}"
   dataFrom:
     - extract:
         key: flux
